--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1689,7 +1689,7 @@ input, select, textarea {
 	/* height: 1000px;
 	width: 900px; */
 	/* max-height: 270px;
-	min-height: 270px; */
+	min-height: 270px */
 	animation: slide 45s linear infinite;
 }
 
